--- a/app/group_window.ui
+++ b/app/group_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>896</width>
-    <height>553</height>
+    <height>580</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,7 +25,7 @@
      <x>40</x>
      <y>119</y>
      <width>381</width>
-     <height>383</height>
+     <height>427</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
@@ -35,27 +35,10 @@
     <property name="horizontalSpacing">
      <number>7</number>
     </property>
-    <item row="12" column="1">
-     <widget class="QLabel" name="lampLabel">
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_5">
       <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="13" column="1" rowspan="3">
-     <widget class="QLabel" name="fertilizerLabel">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-      </property>
-     </widget>
-    </item>
-    <item row="10" column="1">
-     <widget class="QLabel" name="humidityLabel">
-      <property name="text">
-       <string>TextLabel</string>
+       <string> Länge der Blütephase:</string>
       </property>
      </widget>
     </item>
@@ -66,10 +49,47 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="1">
-     <widget class="QLabel" name="temperatureLabel">
+    <item row="2" column="1">
+     <widget class="QLabel" name="ageLabel">
       <property name="text">
        <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="13" column="0">
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string> optimale Temperatur:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="16" column="0">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="8" column="1">
+     <widget class="QLabel" name="soilLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="12" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string> optimale Luftfeuchtigkeit:</string>
       </property>
      </widget>
     </item>
@@ -80,10 +100,59 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0">
-     <widget class="QLabel" name="label_6">
+    <item row="14" column="0">
+     <widget class="QLabel" name="label_10">
       <property name="text">
-       <string> Erwarteter THC Gehalt:</string>
+       <string> Lampenabstand:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="1">
+     <widget class="QLabel" name="lowerThresholdLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string> Länge der Wachstumsphase:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="10" column="1">
+     <widget class="QLabel" name="upperThresholdLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="15" column="0">
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string> Dünger:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="10" column="0">
+     <widget class="QLabel" name="label_13">
+      <property name="text">
+       <string> Bewässerung bis:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLabel" name="floweringLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="growLabel">
+      <property name="text">
+       <string>TextLabel</string>
       </property>
      </widget>
     </item>
@@ -101,44 +170,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string> Länge der Wachstumsphase:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string> Länge der Blütephase:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="14" column="0">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="13" column="0">
-     <widget class="QLabel" name="label_11">
-      <property name="text">
-       <string> Dünger:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="9" column="0" colspan="2">
+    <item row="11" column="0" colspan="2">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -151,6 +183,44 @@
       </property>
      </spacer>
     </item>
+    <item row="12" column="1">
+     <widget class="QLabel" name="humidityLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="15" column="1" rowspan="3">
+     <widget class="QLabel" name="fertilizerLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string> Sorte:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLabel" name="thcLabel">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="0">
+     <widget class="QLabel" name="label_12">
+      <property name="text">
+       <string> Bewässerung von:</string>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="1">
      <widget class="QLabel" name="strainLabel">
       <property name="text">
@@ -158,21 +228,7 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QLabel" name="floweringLabel">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="12" column="0">
-     <widget class="QLabel" name="label_10">
-      <property name="text">
-       <string> Lampenabstand:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="15" column="0">
+    <item row="17" column="0">
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -188,50 +244,22 @@
       </property>
      </spacer>
     </item>
-    <item row="2" column="1">
-     <widget class="QLabel" name="ageLabel">
+    <item row="6" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string> Erwarteter THC Gehalt:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="14" column="1">
+     <widget class="QLabel" name="lampLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QLabel" name="growLabel">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string> Sorte:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="11" column="0">
-     <widget class="QLabel" name="label_9">
-      <property name="text">
-       <string> optimale Temperatur:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="10" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string> optimale Luftfeuchtigkeit:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="1">
-     <widget class="QLabel" name="soilLabel">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="1">
-     <widget class="QLabel" name="thcLabel">
+    <item row="13" column="1">
+     <widget class="QLabel" name="temperatureLabel">
       <property name="text">
        <string>TextLabel</string>
       </property>
@@ -285,7 +313,7 @@
      <x>420</x>
      <y>70</y>
      <width>71</width>
-     <height>431</height>
+     <height>471</height>
     </rect>
    </property>
   </widget>
@@ -295,7 +323,7 @@
      <x>490</x>
      <y>70</y>
      <width>351</width>
-     <height>431</height>
+     <height>471</height>
     </rect>
    </property>
   </widget>
@@ -334,7 +362,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>500</y>
+     <y>540</y>
      <width>801</width>
      <height>4</height>
     </rect>
@@ -358,10 +386,10 @@
   <widget class="Line" name="line_3">
    <property name="geometry">
     <rect>
-     <x>490</x>
+     <x>480</x>
      <y>70</y>
-     <width>4</width>
-     <height>431</height>
+     <width>16</width>
+     <height>471</height>
     </rect>
    </property>
    <property name="font">
@@ -382,10 +410,10 @@
   <widget class="Line" name="line_4">
    <property name="geometry">
     <rect>
-     <x>840</x>
+     <x>830</x>
      <y>70</y>
-     <width>4</width>
-     <height>431</height>
+     <width>20</width>
+     <height>471</height>
     </rect>
    </property>
    <property name="frameShadow">
@@ -401,10 +429,10 @@
   <widget class="Line" name="line_5">
    <property name="geometry">
     <rect>
-     <x>420</x>
+     <x>410</x>
      <y>70</y>
-     <width>4</width>
-     <height>431</height>
+     <width>16</width>
+     <height>471</height>
     </rect>
    </property>
    <property name="font">
@@ -428,7 +456,7 @@
      <x>30</x>
      <y>70</y>
      <width>20</width>
-     <height>431</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="frameShadow">
