--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -135,9 +135,9 @@
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
-      <x>1370</x>
+      <x>1380</x>
       <y>80</y>
-      <width>20</width>
+      <width>4</width>
       <height>601</height>
      </rect>
     </property>
@@ -176,7 +176,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Meldungen </string>
+     <string>Benachrichtigungen</string>
     </property>
    </widget>
    <widget class="QLabel" name="humidityLabel">
