--- a/app/data/data.qrc
+++ b/app/data/data.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>rocket.png</file>
+		<file>greenhouse.json</file>
+		<file>notifications.json</file>
     </qresource>
 </RCC>
